# gifdex-wip

.sqlx/: query-0f80e6e20f19ac714ffdc3a733a8eaa41ebe6be4538e45f39f393515ce0f28ee.json  query-3440f78cf444cbf0237fd927bc8ac864a26c589f731b6aeeee6710883ffcb017.json  query-375748eca1f3ad20d9b749f8823d3e18a276988fc8f47facda0c754949ba8267.json  query-5891d64bd4d748b75da53a7529160eb9be5a9ebe765b5f476d552494395acb90.json  query-84c766cb199dc12ca07ab6856fb49a99af45889bf4a056d286c871dcdce5128e.json  query-88ea5c3b927e37c7e53cf50ff9f801eebc66fe5bd67959bf58e0a622e67f66e4.json  query-a1b66f6a416226e8cbe34984fa5d385bf6d7f1a0b46c4c622e460125753b05e8.json  query-bc7cb0803dcc0b6d848b565f636fd97505e51a11f0d3d3df48f75312b0e76fca.json  query-e1214078e09f0a31f711d5ada46ac2b15193f00cd889752cce0399e79c3b0ff3.json  query-f17ff1ffd406e62aada0dd870e4b7ebc52728ac055f5aa39531afd75b13b5af6.json  query-fab3355f1ba241238514679ee45e4d7aea8afde80f7ccbc33c0d4b72d14aed43.json
crates/.sqlx/: query-02a6b4d6ee28999d78e6d9701b933be31c8c155fca9e19927137e644ec61de64.json  query-1ba760b6737825da0343750d867876fb540ee7966bc858355ab91f2117dd05a4.json  query-5d0ea77a3f2c5cd07925c8a8ddc9f275dfd709adab2f720a4b288300c6144af4.json  query-6354c1df9d8931e0005559767a095d692c968b7669922df3b7fca5f1be9ed2b7.json  query-6992a9f26ba6ff17d1819ba186f8f2e3b2092dc84f1d581a26af634433f636d7.json  query-6efb78e72d73d0efd9476315f32c6515daca4106bdab608643c8b32e07158b57.json  query-b108e42df6ed0d323bdcbef81e934155f02858a6ed464cb0bada69b9c07e15ac.json  query-b4c5c79da3a8e20ff257ff3ab94b03871d64a461243cfe7eeeade062c8b735ee.json  query-c2fda2efb71fe900c48f007f2d51e16a4523c55d39e90b1ec69d997323de7cdb.json  query-c3aa100519d2938c82f5d8be70a875773e1db762beda3f4d54966ead77d241a9.json  query-d17818307823ad64836cdfb614e3c66df86595e3ab75e52725f105abee5d37aa.json  query-f600fe77ff8d26746909737c5b85a82a562da448e43f668b3a0a06c1a39a89f9.json  query-fbe9fe2b89a91680c791d10806fc802f3391b23fc3cd56d1da831b7549aa733d.json
crates/floodgate/: Cargo.toml  TODO.md
crates/floodgate/src/: channel.rs  client.rs
crates/gifdex-appview/: Cargo.toml
crates/gifdex-appview/src/: main.rs
crates/gifdex-appview/src/routes/: mod.rs
crates/gifdex-appview/src/routes/com_atproto/sync/: get_repo_status.rs  mod.rs
crates/gifdex-appview/src/routes/net_gifdex/actor/: get_actor_posts.rs  get_profile.rs  get_profiles.rs  mod.rs
crates/gifdex-cdn/: Cargo.toml
crates/gifdex-cdn/src/: main.rs
crates/gifdex-cdn/src/routes/: avatar.rs  gif.rs  mod.rs
crates/gifdex-ingest/: Cargo.toml
crates/gifdex-ingest/src/: main.rs
crates/gifdex-ingest/src/handlers/: mod.rs
crates/gifdex-ingest/src/handlers/actor/: profile.rs
crates/gifdex-ingest/src/handlers/feed/: favourite.rs  post.rs
crates/gifdex-ingest/src/handlers/identity/: mod.rs
crates/gifdex-ingest/src/handlers/moderation/: label.rs
crates/gifdex-lexicons/: Cargo.toml  README.md
crates/gifdex-lexicons/src/net_gifdex/: actor.rs  feed.rs  labeler.rs
crates/gifdex-lexicons/src/net_gifdex/actor/: get_posts.rs  get_profile.rs  get_profiles.rs  profile.rs
crates/gifdex-lexicons/src/net_gifdex/feed/: post.rs
crates/gifdex-lexicons/src/net_gifdex/labeler/: label.rs  rule.rs
crates/lesgif-ingest/src/: main.rs
crates/lesgif-lexicons/: README.md
crates/lesgif-lexicons/src/net_dollware/lesgif/feed/: post.rs  (+1 more)
crates/sqlx-migrations/: 20260113201040_init.sql
frontend/: package-lock.json
frontend/src/lib/components/: PostCard.svelte
frontend/src/lib/components/auth/: AccountDropdown.svelte  AuthenticationDialog.svelte
frontend/src/lib/components/base/: Dialog.svelte  Shimmer.svelte
frontend/src/lib/components/layouts/: MasonryGrid.svelte
frontend/src/lib/components/site/: SiteHeader.svelte
frontend/src/lib/stores/: auth.svelte.ts  user.svelte.ts
frontend/src/lib/styles/: theme.css
frontend/src/routes/: +layout.svelte  +page.svelte
frontend/src/routes/profile/[actor]/: +page.svelte
lexicons/actor/: defs.json  getPosts.json  getProfile.json  getProfiles.json  profile.json
lexicons/feed/: defs.json  favourite.json  post.json
lexicons/labeler/: label.json  rule.json
lexicons/moderation/: label.json
(+9 files in other folders)
