[package]
name = "gifdex-appview"
edition = "2024"

[dependencies]
axum = { version = "0.8.8", features = ["http2", "macros"] }
sqlx = { version = "0.8.6", features = [
    "runtime-tokio",
    "postgres",
    "tls-rustls",
] }
anyhow = "1.0.100"
clap = { version = "4.5.53", features = ["derive", "env"] }
dotenvy = "0.15.7"
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.48.0", features = [
    "macros",
    "rt-multi-thread",
    "signal",
    "net",
] }
tower-http = { version = "0.6.8", features = [
    "catch-panic",
    "normalize-path",
    "trace",
] }
tracing = "0.1.43"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
jacquard-axum = "0.9.6"
jacquard-common = "0.9.5"
gifdex-lexicons = { path = "../gifdex-lexicons" }
jacquard-api = { version = "0.9.5", default-features = false, features = [
    "com_atproto",
] }
serde_json = "1.0.149"
