[package]
name = "gifdex-cdn"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.8", features = ["http2"] }
sqlx = { version = "0.8.6", features = [
    "runtime-tokio",
    "postgres",
    "tls-rustls",
] }
anyhow = "1.0.100"
clap = { version = "4.5.53", features = ["derive", "env"] }
dotenvy = "0.15.7"
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.48.0", features = [
    "macros",
    "rt-multi-thread",
    "signal",
    "net",
] }
tower-http = { version = "0.6.8", features = [
    "catch-panic",
    "normalize-path",
    "trace",
] }
tracing = "0.1.43"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
floodgate = { path = "../floodgate" }
reqwest = { version = "0.13.1", default-features = false, features = [
    "http2",
    "charset",
    "system-proxy",
    "stream",
] }
futures = "0.3.31"
infer = "0.19.0"
cid = "0.11.1"
multihash = "0.19.3"
multihash-codetable = { version = "0.1.4", features = ["sha2"] }
