[package]
name = "gifdex-ingest"
edition = "2024"

[lints.rust]
unsafe_code = "forbid"

[dependencies]
anyhow = { version = "1.0.99", features = ["backtrace"] }
clap = { version = "4.5.54", features = ["derive", "env"] }
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.49.0", features = [
    "macros",
    "rt-multi-thread",
    "signal",
    "net",
] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
dotenvy = "0.15.7"
serde_json = "1.0.149"
sqlx = { version = "0.8.6", features = [
    "runtime-tokio",
    "postgres",
    "tls-rustls",
] }
url = { version = "2.5.8", features = ["serde"] }
jacquard-common = "0.9.5"
gifdex-lexicons = { path = "../gifdex-lexicons" }
floodgate = { path = "../floodgate" }
rustls = { version = "0.23.17", features = ["aws-lc-rs"] }
